# skymark

./: .gitignore  BUILD.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-05-31T15-43-32-793Z.yml  page-2026-06-17T00-44-48-289Z.yml
crates/skymark-app/: Cargo.toml  Info.plist  tauri.conf.json
crates/skymark-app/capabilities/: default.json
crates/skymark-app/icons/: icon.icns
crates/skymark-app/src/: commands.rs  dir.rs  draft.rs  macos_open.rs  main.rs  menu.rs  storage.rs  vault.rs  watcher.rs
crates/skymark-core/: Cargo.toml
crates/skymark-core/src/: lib.rs  render.rs  sanitize.rs  smart_edit.rs
crates/skymark-core/tests/: render.rs
docs/architecture/review/: 2026-05-07-skymark-design-architecture.html  2026-05-10-skymark-format-toolbar-design-architecture.html  2026-05-11-skymark-codebase-architecture.html
docs/superpowers/plans/: 2026-05-07-phase-1-vertical-slice.md  2026-05-07-phase-3-vault-mode.md  2026-05-08-phase-4-vault-enhancements.md  2026-05-09-phase-6-export.md  2026-05-10-editor-preview-sync.md  2026-05-10-format-toolbar.md  2026-05-10-phase-7-release-packaging.md  2026-05-10-system-menu.md  2026-06-19-yaml-frontmatter.md
docs/superpowers/specs/: 2026-05-07-phase-3-vault-design.md  2026-05-07-skymark-design.md  2026-05-08-phase-4-vault-enhancements-design.md  2026-05-08-phase-5-preview-enrichment-design.md  2026-05-09-phase-6-export-design.md  2026-05-10-editor-preview-sync-design.md  2026-05-10-format-toolbar-design.md  2026-05-10-phase-7-release-packaging-design.md  2026-05-10-system-menu-design.md  2026-05-11-lazy-loaded-directory-vault-design.md  2026-06-19-yaml-frontmatter-design.md
frontend/: index.html  package-lock.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  clipboard-json.test.ts  clipboard-json.ts  clipboard-md.test.ts  clipboard-md.ts  codeblock-highlight.test.ts  codeblock-highlight.ts  dir-tree.ts  draft.ts  editor.test.ts  editor.ts  enrich-highlight.ts  enrich-math.ts  enrich-mermaid.ts  export-dropdown.ts  export.ts  files.ts  frontmatter-lang.test.ts  frontmatter-lang.ts  headings.ts  links.ts  main.ts  palette.ts  preview-links.test.ts  preview-links.ts  preview.test.ts  preview.ts  shiki-singleton.ts  smart_edit.ts  stats.test.ts  stats.ts  sync.test.ts  sync.ts  tabs.ts  test-setup.ts  theme.ts  toast.ts  toolbar.ts  tree.ts  update-banner.test.ts  (+3 more)
frontend/src/styles/: app.css  tokens.css
