[workspace]
resolver = "2"
members = ["crates/skymark-core"]
# skymark-app is added in Phase 1 Task 7.

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jinzuo/skymark"

[workspace.dependencies]
pulldown-cmark = { version = "0.10", default-features = false, features = ["html"] }
ammonia = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
