[workspace]
resolver = "2"
members = ["crates/skymark-core", "crates/skymark-app"]

[workspace.package]
version = "0.3.19"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sirius-zuo/skymark"

[workspace.dependencies]
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
ammonia = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
notify-debouncer-mini = "0.4"
objc2 = "0.6"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
